--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -22,16 +22,16 @@
     <title>Learn consult</title>
 
 
-     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
 @*      <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
  *@
     
 
-    <link href="~/css/site.css" rel="stylesheet">
-    <link href="~/css/site1.css" rel="stylesheet">
-    <link href="~/css/site2.css" rel="stylesheet">
-    <link href="~/css/site3.css" rel="stylesheet">
-    <link href="~/css/site4.css" rel="stylesheet">
+    <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/site1.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/site2.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/site3.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/site4.css" rel="stylesheet" asp-append-version="true">
    @* <link href="~/css/StyleSheet.css" rel="stylesheet"> *@
 
      <style>
@@ -211,11 +211,11 @@
 
 
     <!-- Additional Scripts -->
-    <script src="~/js/site.js"></script>
-    <script src="~/js/site1.js"></script>
-    <script src="~/js/site2.js"></script>
-    <script src="~/js/site3.js"></script>
-    <script src="~/js/site4.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site1.js" asp-append-version="true"></script>
+    <script src="~/js/site2.js" asp-append-version="true"></script>
+    <script src="~/js/site3.js" asp-append-version="true"></script>
+    <script src="~/js/site4.js" asp-append-version="true"></script>
  
 
     <script language="text/Javascript">
