opearting new page that is for test

--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddCourseViewModel
+﻿
 @{
     Layout = "_Layout";
 }
@@ -32,8 +32,8 @@
               <a href="#"><img src="~/images/product_01.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Title</h4></a>
-               @*  <h6>@Model.PriceStatus</h6>
-                <p>@Model.CourseDescription</p> *@
+                <h6>PriceStatus</h6>
+                <p>CourseDescription</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
