--- a/WebApplication2/Views/Home/New.cshtml
+++ b/WebApplication2/Views/Home/New.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@inject LconsultDBContext _context
+@{ 
+    var courses = _context.Courses.OrderByDescending(c => c.AverageRating)
+     .Take(10).ToList();
+}
+@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -60,7 +65,7 @@
             </div>
 
         </nav>
-    </header>
+    </header> *@
 
     <!-- Page Content -->
 
@@ -69,7 +74,83 @@
         </div>
     </div>
 
+    <div class="latest-products">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h2>Top Courses</h2>
+                        <a asp-controller="home" asp-action="course">view all courses <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                
+                    
 
+                        @foreach (var items in courses)
+                        {
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <a href="#"><img src="~/images/courses/@items.Picture" alt=""></a>
+                                    <div class="down-content">
+                                        <a href="#"><h4>@items.Title</h4></a>
+                                        @if(items.PriceStatus is true){
+                                            <h6> paid </h6>
+                                        }else{
+                                             <h6>free  </h6>
+                                        }     
+                                        <p>@items.CourseDescription</p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star">@items.AverageRating</i></li>
+
+                                        </ul>
+                                        <span>Reviews (24)</span>
+                                        </div>
+                                        </div>
+                                        </div>
+
+                        }
+ 
+                   
+               
+@*                 <div class="col-md-4">
+                    <div class="product-item">
+                        <a href="#"><img src="~/images/product_02.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#"><h4>Tittle goes here</h4></a>
+                            <h6>Paid</h6>
+                            <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                            <ul class="stars">
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                            </ul>
+                            <span>Reviews (21)</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="product-item">
+                        <a href="#"><img src="~/images/product_03.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#"><h4>Tittle goes here</h4></a>
+                            <h6>Free</h6>
+                            <p>Sixteen Clothing is free CSS template provided by TemplateMo.</p>
+                            <ul class="stars">
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                                <li><i class="fa fa-star"></i></li>
+                            </ul>
+                            <span>Reviews (36)</span>
+                        </div>
+                    </div>
+                </div> *@
+            </div>
+        </div>
+    </div>
     <!-- Login 6 - Bootstrap Brain Component -->
 
 
@@ -85,6 +166,6 @@
     </script>
 
    
-</body>
+@* </body>
 
-</html>
+</html> *@
