--- a/WebApplication2/Views/Shared/_StudentLayout.cshtml
+++ b/WebApplication2/Views/Shared/_StudentLayout.cshtml
@@ -87,11 +87,11 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="nav-item ">
+@*                         <li class="nav-item ">
                             <a class="nav-link" asp-controller="student" asp-action="review">
                                 Add Review
                             </a>
-                        </li>
+                        </li> *@
 
                         <li class="nav-item">
                             <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
